# nodejs/class-notes/TEKRAR/18-PersonnelAPI _LOG_DOCS/src/controllers/personnel.controller.js
@@ -9,6 +9,21 @@ module.exports = {
 
     list: async (req, res) => {
 
+          /*
+            #swagger.tags = ['Personnels']
+            #swagger.summary = 'List Personnels'
+            #swagger.description = '
+             You can sen query with endpoint for search[], sort[], page and limit.
+             <ul> Examplses:
+
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+             
+             </ul>
+             '
+        */
+
         const data = await res.getModelList(Personnel, {}, 'departmentId')
 
         res.status(200).send({
@@ -20,6 +35,20 @@ module.exports = {
     },
 
     create: async (req, res) => {
+
+         /*
+            #swagger.tags = ['Personnels']
+            #swagger.summary = 'Create Personnel'
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+            
+             
+        */
 
         // isLead Control:
         const isLead = req.body?.isLead || false
@@ -38,6 +67,12 @@ module.exports = {
 
     read: async (req, res) => {
 
+         /*
+            #swagger.tags = ['Personnels']
+            #swagger.summary = 'Get Single Personnel'
+             
+        */
+
         const data = await Personnel.findOne({ _id: req.params.id })
 
         res.status(200).send({
@@ -48,6 +83,23 @@ module.exports = {
     },
 
     update: async (req, res) => {
+
+         /*
+            #swagger.tags = ['Personnels']
+            #swagger.summary = 'Update Personnel'
+             #swagger.description = "Look <b>'Models/Department'</b> for parameters."
+            #swagger.description = "Look <b>'Models/Department'</b> for parameters."
+             #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+            
+            
+             
+        */
 
         // isLead Control:
         const isLead = req.body?.isLead || false
@@ -66,6 +118,12 @@ module.exports = {
     },
 
     delete: async (req, res) => {
+
+         /*
+            #swagger.tags = ['Personnels']
+            #swagger.summary = 'Delete Personnel'
+             
+        */
 
         const data = await Personnel.deleteOne({ _id: req.params.id })
 
